--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "liri.js",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "omdb": "0.8.0"
   },
   "devDependencies": {},
   "scripts": {
