--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "liri.js",
   "dependencies": {
-    "dotenv": "^8.2.0",
     "axios": "^0.18.0",
+    "dotenv": "^8.2.0",
+    "node-spotify-api": "^1.1.1",
     "omdb": "0.8.0"
   },
   "devDependencies": {},
