--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
     "node-spotify-api": "^1.1.1",
     "omdb": "0.8.0"
   },
